stopped the header-top image gaps from stretching

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ img {
 }
 
 #header * {
-    align-self: center;
+  align-self: center;
 }
 
 #header-buttons-container {
@@ -119,48 +119,53 @@ img {
 }
 
 #header-top {
-    display: grid;
-    grid-template-columns: 1fr 8fr 1fr 1fr 3fr;
-    /* justify-items: center; */
+  display: grid;
+  grid-template-columns: 1fr 8fr 5fr 1fr;
+}
+
+#header-top-right {
+  display: flex;
+  gap: 10px;
+  justify-content: end;
 }
 
 #header-top img {
-    justify-self: center;
+  justify-self: center;
 }
 
 #header-top input {
-    margin-right: 20%;
-    border-radius: 20px;
-    border: 2px solid lightgray;
-    height: 100%
+  margin-right: 20%;
+  border-radius: 20px;
+  border: 2px solid lightgray;
+  height: 100%
 }
 
 #header-bottom {
-    display: flex;
-    justify-content: space-between;
-    align-self: center;
+  display: flex;
+  justify-content: space-between;
+  align-self: center;
 }
 
 #profile-greeting {
-    display: grid;
-    grid: 30px 30px / 85px 255px;
+  display: grid;
+  grid: 30px 30px / 85px 255px;
 }
 
 #profile-greeting img {
-    grid-area: 1 / 1 / 3 / 2;
-    height: 100%;
-    width: 100%;
+  grid-area: 1 / 1 / 3 / 2;
+  height: 100%;
+  width: 100%;
 }
 
 #profile-greeting p:first-of-type {
-    grid-area: 1 / 2 / 2 / 3;
-    align-self: end;
+  grid-area: 1 / 2 / 2 / 3;
+  align-self: end;
 }
 
 #profile-greeting p:nth-of-type(2) {
-    grid-area: 2 / 2 / 3 / 3;
-    align-self: start;
-    font-size: 20px;
+  grid-area: 2 / 2 / 3 / 3;
+  align-self: start;
+  font-size: 20px;
 }
 
 #body {
